--- a/src/View/componentes/menu.twig
+++ b/src/View/componentes/menu.twig
@@ -27,9 +27,19 @@
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <ul class="nav navbar-nav navbar-right">
+        {% if usuario is not empty %}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{usuario.nome|capitalize|split(' ')[0]}}
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/logout"><span class="fa fa-sign-out fw"></span> Sair</a>
+          </div>
+        </li>
+        {% endif %}
+        
+      </ul>
   </div>
 </nav>
