Cadastro tipos de cliente

--- a/src/View/master.twig
+++ b/src/View/master.twig
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+        <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
     {{ include('componentes/menu.twig') }}
@@ -25,9 +25,9 @@
 
             {% block rodape %}
 
-                <script src="js/jquery-3.3.1.min.js" type="text/javascript" ></script>
-                <script src="js/funcoes.js" type="text/javascript" ></script>
-                <script src="js/bootstrap.min.js" type="text/javascript"></script>
+                <script src="/js/jquery-3.3.1.min.js" type="text/javascript" ></script>
+                <script src="/js/funcoes.js" type="text/javascript" ></script>
+                <script src="/js/bootstrap.min.js" type="text/javascript"></script>
             {% endblock %}
         </div>
         {% block script_end %}
