--- a/src/View/componentes/menu.twig
+++ b/src/View/componentes/menu.twig
@@ -12,10 +12,10 @@
           <i class="fa fa-group fa-fw"></i> Clientes
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#"><i class="fa fa-table fa-fw"></i> Listar clientes</a>
+          <a class="dropdown-item" href="/admin/clientes"><i class="fa fa-table fa-fw"></i> Listar clientes</a>
           <a class="dropdown-item" href="/admin/tiposcliente"><i class="fa fa-cog fa-fw"></i> Tipos de clientes</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#"><i class="fa fa-plus fa-fw"></i> Cadastrar cliente</a>
+          <a class="dropdown-item" href="/admin/cliente/novo"><i class="fa fa-plus fa-fw"></i> Cadastrar cliente</a>
         </div>
       </li>
       <li class="nav-item dropdown active">
