--- a/src/View/componentes/menu.twig
+++ b/src/View/componentes/menu.twig
@@ -23,10 +23,10 @@
           <i class="fa fa-bank fa-fw"></i> Imóveis
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#"><i class="fa fa-table fa-fw"></i> Listar imóveis</a>
-          <a class="dropdown-item" href="#"><i class="fa fa-cog fa-fw"></i> Tipos de imóveis</a>
+          <a class="dropdown-item" href="/admin/tiposimoveis"><i class="fa fa-table fa-fw"></i> Listar imóveis</a>
+          <a class="dropdown-item" href="/admin/tiposimoveis"><i class="fa fa-cog fa-fw"></i> Tipos de imóveis</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#"><i class="fa fa-plus fa-fw"></i> Cadastrar imóvel</a>
+          <a class="dropdown-item" href="/admin/tiposimoveis/novo"><i class="fa fa-plus fa-fw"></i> Cadastrar imóvel</a>
         </div>
       </li>
       <li class="nav-item active">
